# mikey.bike

./: .ghc.environment.x86_64-darwin-8.6.5  .gitignore  .hspec  Makefile  README  README.md  about.md  brittany.yaml  cabal.project  cabal.project.freeze  fourmolu.yaml  hie.yaml  index.html  mikey-bike.cabal  resume.html  shell-osx.nix  site.hs
.github/workflows/: deploy.yml  haskell.yml  test.yml
exe/: Main.hs
journal/2019/07/: presenters-for-rails-controllers.org
journal/2019/08/: at-time-zone.org
journal/2019/11/: 11-at-time-zone.org  17-no-need-for-monad.org
journal/2020/06/: 27-a-new-subtitle.md
journal/2020/07/: 06-unintentional-community.md  18-problem-with-sigterm.md  30-choosing-paths.md
journal/2021/01/: 03-living-alone.md  10-rock-climbing.md  16-journaling.md  17-this-site.md  24-my-desk.md
journal/2021/02/: 06-cameras.md
journal/2021/03/: 18-slack.md
journal/2021/07/: 25-unintentional-birder.md
journal/2021/10/: asset-hashing.md
journal/2022/08/: the-messy-pr.org
journal/2023/: emacs-copilot-and-gpt.md
journal/2023/04/: dry-rb-monad-laws.md
journal/2023/06/: pg-enum-migrations.org
journal/2025/04/: ten-years-of-emacs.org
journal/2026/01/: favorite-things-of-2025.org
lists/books/2024/: doom.md  smalltalk.md  soul-of-a-new-machine.md  the-emerald-mile.md
lists/books/2025/: crafting-interpreters.md  skunk-works.md
lists/games/2024/: firewatch.md
lists/house/2024/: fellow-mug.md
lists/movies/2025/: doors.md  lawrence-of-arabia.md  the-lobster.md
misc/: aug21.md  san-juan-sailing.md  superior.md
notes/: haskell.org
scripts/: check-formatting  deploy  format
src/: AssetHashing.hs  FileHash.hs  Main.hs  Site.hs
src/Contexts/: Layout.hs  NextPrevNav.hs
src/Models/: ArchiveGrouping.hs
src/Rules/: Journal.hs  Lists.hs  Notes.hs  Writing.hs
stylesheets/: base-2.css  base.css  for_jim.css  home.css  journal-2.css  journal-4.css  journal-5.css  journal-6.css  journal-7.css  journal-8.css  journal-9.css  journal.css  notes-1.css  old_bike.css  resume.css  root.css  writings-2.css  writings-3.css  writings.css
templates/: _footer.html  _footer_journal.html  _footer_notes.html  _header_journal.html  journal-page.html  journal.html  journal_archive.html  journal_index.html  layout-j.html  layout-no-footer.html  layout-notes.html  layout.html  notes_index.html  writing.html  writing_index.html  writing_section.html
templates/base/: layout.html
templates/journal/: _header.html  home.html  journal_home.html  layout-j.html  layout.html  page.html  static-page.html
templates/lists/: home.html  item.html
test/: AssetHashingSpec.hs  FileHashSpec.hs
writings/: east.md  misc.md  west.md
writings/east/: barnet.markdown  disc-golf.markdown  granny-gears.markdown  niagara.markdown  ohio.markdown  saranac.markdown  the_plan.markdown  winooski.markdown
writings/misc/: catalunya.md  utah-2019.md
writings/west/: week1.md  week2.md  week3.md  week4.md
