cabal-version:      2.4

name:               mikey-bike
version:            0.1.0.0
build-type:         Simple

synopsis:           Static site generator for http://mikey.bike.
description:        Static site generator, using the Hakyll library,
                    for http://mikey.bike.
category:           Web
author:             Michael Hoy
maintainer:         mjh@mjhoy.com

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -threaded
  default-language: Haskell2010
  other-modules:    Rules.Writing
                  , Rules.Journal
                  , Contexts.NextPrevNav
  build-depends:    base == 4.*
                  , directory ^>= 1.3.3.0
                  , extra ^>= 1.6.15
                  , filepath >=1.4
                  , hakyll == 4.13.*
                  , hfsevents
                  , hxt >=9.3
                  , time >=1.6
                  , time-locale-compat >=0.1
