cabal-version:      3.0

name:               mikey-bike
version:            0.1.0.0
build-type:         Simple

synopsis:           Static site generator for http://mikey.bike.
description:        Static site generator, using the Hakyll library,
                    for http://mikey.bike.
category:           Web
author:             Michael Hoy
maintainer:         mjh@mjhoy.com

executable site
  main-is:          Main.hs
  hs-source-dirs:   exe
  ghc-options:      -threaded
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , mikey-bike

library
  hs-source-dirs:   src
  ghc-options:      -threaded
  default-language: Haskell2010
  exposed-modules:  Rules.Writing
                  , Rules.Journal
                  , Rules.Notes
                  , FileHash
                  , Contexts.NextPrevNav
                  , Models.ArchiveGrouping
                  , Site
  build-depends:    base == 4.*
                  , base16-bytestring ^>= 1.0.1.0
                  , bytestring ^>= 0.10.12.0
                  , containers ^>= 0.6.2.1
                  , cryptohash-sha256 ^>= 0.11.102.0
                  , directory ^>= 1.3.3.0
                  , extra ^>= 1.6.15
                  , filepath >=1.4
                  , hakyll == 4.13.*
                  , hxt >=9.3
                  , time >=1.6
                  , time-locale-compat >=0.1

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    FileHashSpec
  build-depends:    base == 4.*
                  , containers ^>= 0.6.2.1
                  , filepath >=1.4
                  , hakyll == 4.13.*
                  , hspec ^>= 2.8.3
                  , mikey-bike
  build-tool-depends: hspec-discover:hspec-discover
